# WoM

./: .gitignore  Makefile  pyproject.toml  res_main.qrc  res_main_rc.py  test.py
databases/: bta_database.db
wom/Almanac/: Almanac.json  lfk_appointments.json  physio_appointments.json
wom/GUI/PY/: bta_AddNewPatient.py  bta_Discharge_details.py  bta_MainMenu.py  bta_Neur_status.py  bta_PatientCard.py  bta_PatientPassportData.py  bta_Protocol.py
wom/GUI/UI/: bta_AddNewPatient.ui  bta_Discharge_details.ui  bta_MainMenu.ui  bta_Neur_status.ui  bta_Obj_status.ui  bta_PatientCard.ui  bta_PatientPassportData.ui  bta_Protocol.ui
wom/GUI/windows/: FramelessWindow.py  bta_add_new_patient.py  bta_discharge_details.py  bta_main_menu.py  bta_neur_status.py  bta_passport_data.py  test.py  (+2 more)
wom/app_logic/: copy_archive_case.py  create_docs.py  postprocessing.py  service_func.py  worklist_data_processing.py
wom/scripts/: show.py
wom/settings/: config.py
wom/styles_qss/: main_styles.py
wom/templates/: ВАШ.docx  ВК_продление_ЛН.docx  ВК_продление_ЛН_2.docx  ВК_продление_ЛН_выписка.docx  Выписной эпикриз.docx  Дневники.docx  Итоговый осмотр.docx  Лист назначений.docx  МКФ.docx  Направление.docx  Новый стат.талон 2 стр. (чистый).odt  Оборот обложки ИБ.docx  Осмотр_психолога.docx  Осмотр_психолога_с_МКФ.docx  Отказ_от_госпитализации.docx  Первичный осмотр.docx  Пропуск_для_посещения.docx  Рецепт_пустой.docx  Рецепты.docx  Согласия.docx  Справка.docx  Стат.талон - 2 стр (530н).docx  Стат.талон - 2 стр.docx  Стат.талон - дополнение.docx  Шкалы, дневники, МКФ.docx  Шкалы.docx
(+138 files in other folders)
